adaptation to JDK 25